@@ -9,3 +9,5 @@ passwordDialogEnterPrivateKey=Enter your private key :
 youMustEnterPassword=You must enter a password !
 choosePublicKeyTitle=FireGPG - public key
 choosePublicKeyDescription=Choose the public key :
+showTextDefaultTitle=FireGPG - result
+showTextDefaultDescription=The result of the operation :
