@@ -1,2 +1,0 @@
-<!ENTITY title "Résultat de FireGPG">
-<!ENTITY description "Résultat de l'opération :">
